--- a/main.css
+++ b/main.css
@@ -13,7 +13,21 @@ body * {
 	margin: 0 auto;
 	padding: 0;
 	position: relative;
-	
+}
+
+.l-col {
+	width: 620px;
+	padding: 0;
+	margin: 0;
+	height: 580;
+	display: inline-block;
+}
+
+.r-col{
+	width: 320px;
+	height: 580px;
+	display: inline-block;
+
 }
 
 .header { 
@@ -24,14 +38,15 @@ body * {
 	padding: 0;
 	margin: 0;
 	display: block;
-	text-shadow:0 1px 1px #000;
+	
+
 	font-weight: lighter;
 	color: #fff;
 }
 
 .middle {
 	background-color: #EFECE7;
-	height: 800px;
+	height: 580px;
 }
 
 
@@ -75,7 +90,7 @@ body * {
 
 .profile-info {
 	position: absolute;
-	right: 0;
+	right: 23px;
 }
 
 .profile {
@@ -128,11 +143,213 @@ body * {
 	margin: 10px 17px; 
 }
 
+.imgbar-info {
+	position: absolute;
+	right: 25px;
+	top: 18px;
+	font-size: 13px;
+}
+
+.imgbar-info img {
+	margin-right: 2px;
+}
+
+.imgbar-info span {
+	letter-spacing: 1px;
+}
+
+/* This Is Ribbon stuff */
 
 
+ .ribbon-wrapper {
+	position: relative;
+	margin-top: 340px;
+	margin-left: 16px; 
+	border-top: 0px solid #ccc;
+	-moz-border-bottom-colors: rgba(0, 0, 0, 0.02) rgba(0, 0, 0, 0.04) rgba(0, 0, 0, 0.06) rgba(0, 0, 0, 0.08) rgba(0, 0, 0, 0.10) rgba(0, 0, 0, 0.12) rgba(0, 0, 0, 0.14) rgba(0, 0, 0, 0.16) rgba(0, 0, 0, 0.18) rgba(0, 0, 0, 0.20);
+	-webkit-border-bottom-colors: rgba(0, 0, 0, 0.02) rgba(0, 0, 0, 0.04) rgba(0, 0, 0, 0.06) rgba(0, 0, 0, 0.08) rgba(0, 0, 0, 0.10) rgba(0, 0, 0, 0.12) rgba(0, 0, 0, 0.14) rgba(0, 0, 0, 0.16) rgba(0, 0, 0, 0.18) rgba(0, 0, 0, 0.20);
+	-moz-border-top-colors: rgba(0, 0, 0, 0.02) rgba(0, 0, 0, 0.04) rgba(0, 0, 0, 0.06) rgba(0, 0, 0, 0.08) rgba(0, 0, 0, 0.10) rgba(0, 0, 0, 0.12) rgba(0, 0, 0, 0.14) rgba(0, 0, 0, 0.16) rgba(0, 0, 0, 0.18) rgba(0, 0, 0, 0.20);
+	-webkit-border-top-colors: rgba(0, 0, 0, 0.02) rgba(0, 0, 0, 0.04) rgba(0, 0, 0, 0.06) rgba(0, 0, 0, 0.08) rgba(0, 0, 0, 0.10) rgba(0, 0, 0, 0.12) rgba(0, 0, 0, 0.14) rgba(0, 0, 0, 0.16) rgba(0, 0, 0, 0.18) rgba(0, 0, 0, 0.20);
+}
+  .ribbon-front {
+	background-color: #F1C127;	height: 35px;
+	width: 140px;
+	position: relative;
+	left:-20px;
+	z-index: 2;
+	border-bottom: 1px solid #BB8612;
+	margin-left: 1px;
+}
+
+  .ribbon-front,
+  .ribbon-back-left,
+  .ribbon-back-right
+{
+	-moz-box-shadow: 0px 0px 4px rgba(0,0,0,0.55);
+	-khtml-box-shadow: 0px 0px 4px rgba(0,0,0,0.55);
+	-webkit-box-shadow: 0px 0px 4px rgba(0,0,0,0.55);
+	-o-box-shadow: 0px 0px 4px rgba(0,0,0,0.55);
+}
+
+  .ribbon-edge-topleft,
+  .ribbon-edge-topright,
+  .ribbon-edge-bottomleft,
+  .ribbon-edge-bottomright {
+	position: absolute;
+	z-index: 1;
+	border-style:solid;
+	height:0px;
+	width:0px;
+}
+
+  .ribbon-edge-topleft,
+  .ribbon-edge-topright {
+}
+
+  .ribbon-edge-bottomleft,
+  .ribbon-edge-bottomright {
+	top: 35px;
+}
+
+  .ribbon-edge-topleft,
+  .ribbon-edge-bottomleft {
+	left: -20px;
+	border-color: transparent #F1C127 transparent transparent;
+}
+
+  .ribbon-edge-topleft {
+	top: 0px;
+	border-width: 0px 20px 0 0;
+}
+  .ribbon-edge-bottomleft {
+	border-width: 0px 5px 16px 1px;;
+	margin-left: -1px;
+}
+
+  .ribbon-edge-topright,
+  .ribbon-edge-bottomright {
+	left: 140px;
+	border-color: transparent transparent transparent #F1C127;
+}
+
+  .ribbon-edge-topright {
+	top: 0px;
+	border-width: 0px 0 0 0px;
+}
+  .ribbon-edge-bottomright {
+	border-width: 0 0 0px 0px;
+}
+
+  .ribbon-back-left {
+	position: absolute;
+	top: 10px;
+	left: -10px;
+	width: 10px;
+	height: 35px;
+	background-color: #F1C127;	z-index: 0;
+}
+
+  .ribbon-back-right {
+	position: absolute;
+	top: 0px;
+	right: 0px;
+	width: 0px;
+	height: 35px;
+	z-index: 0;
+}
+
+.ribbon-text {
+	margin-left: 19px;
+	margin-top: 8px;
+	position: absolute;
+	font-size: 13px;
+	font-weight: bolder;
+	letter-spacing: 1px;
+	text-shadow:0 1px 1px #BB8612;
+}
+
+/* Ribbon stuff  END */
+
+.imgbar-btm{
+	width: 620px;
+	height: 85px;
+	background-color: #C5C2BA;
+	position: relative;
+	margin-top: -17px;
+	margin-left: -16px;
+
+}
+
+.imgbar-subtext {
+	font-style: italic;
+	color: #454544;
+	padding-top: 23px;
+	padding-left: 16px;
+	margin: 0;
+	font-size: 17px; 
+}
+
+.sub {
+	color: #747372;
+	font-size: 13px;
+	padding-left: 13px;
+	margin: 0 17px;
+}
+
+/* Righ Col start here */
+
+.box {
+	width: 140px;
+	height: 152px;
+	background-color: #C5C2BA;
+	display: inline-block;
+	margin-top: 30px;
+	margin-left: 15px;
+}
+
+.boxx {
+	width: 140px;
+	height: 152px;
+	background-color: #C5C2BA;
+	display: inline-block;
+	margin-top: 30px;
+	margin-left: 21px;
+}	
+
+.box h1 {
+	font-size: 65px;
+	color: #fff;
+	text-shadow:0 0px 2px rgba(94, 91, 91, 0.99);
+	margin: 0;
+	text-align: center;
+}
+
+.boxx h1 {
+	font-size: 65px;
+	color: #fff;
+	text-shadow:0 0px 2px rgba(94, 91, 91, 0.99);
+	margin: 0;
+	text-align: center;
+}
+
+.inside {
+	width: 140px;
+	height: 36px;
+	position: absolute;
+	background-color: #A69F91;
+	margin-top: 32px;
+
+}
 
 
+.insidee {
+	width: 140px;
+	height: 36px;
+	position: absolute;
+	background-color: #A69F91;
+	margin-top: 32px;
 
+}
 
 
 
