updated all files

--- a/main.css
+++ b/main.css
@@ -19,14 +19,13 @@ body * {
 	width: 620px;
 	padding: 0;
 	margin: 0;
-	height: 580;
 	display: inline-block;
 }
 
 .r-col{
 	width: 320px;
-	height: 580px;
 	display: inline-block;
+	margin-left: 16px;
 
 }
 
@@ -38,20 +37,46 @@ body * {
 	padding: 0;
 	margin: 0;
 	display: block;
-	
-
+	text-shadow: 0 2px 2px #000;
 	font-weight: lighter;
 	color: #fff;
+}
+
+.subheader {
+	height: 87px;
+	background-color: #FAFAFA;
+	padding-top: 0;
+	box-shadow: 0 1px 6px rgba(0, 0, 0, 0.14);
+	position: relative;
+	
 }
 
 .middle {
 	background-color: #EFECE7;
 	height: 580px;
+	border-bottom: 1px solid #A7A7A7;
+}
+
+.second-body {
+	background-color: #FAFAFA;
+	position: relative;
+	height: 348px;
+}
+
+.third-body {
+	background-color: #FAFAFA;
+	height: 290px;
+	border-bottom: 1px solid #383737;
+}
+
+.footer {
+	height: 350px;
+	background: #545352;
+	position: relative;
 }
 
 
 /*Everything uder here must be inline-block*/
-
 
 
 .header .container * {
@@ -66,6 +91,7 @@ body * {
 .nav {
 	padding: 0;
 	margin: 16px 15px 16px 38px;
+
 	
 }
 
@@ -90,7 +116,7 @@ body * {
 
 .profile-info {
 	position: absolute;
-	right: 23px;
+	right: 0;
 }
 
 .profile {
@@ -105,15 +131,6 @@ body * {
 	border-style: solid;
 	border-width: 6px 6px 0 6px;
 	margin-top: 25px;
-}
-
-.subheader {
-	height: 87px;
-	background-color: #FAFAFA;
-	padding-top: 0;
-	box-shadow: 0 1px 6px rgba(0, 0, 0, 0.14);
-	position: relative;
-
 }
 
 .subheader h1 {
@@ -135,7 +152,7 @@ body * {
 	height: 55px;
 	position: absolute;
 	top: 30px;
-	background-color: rgba(0, 0, 0, 0.55);
+	background-color: rgba(0, 15, 37, 0.71);
 	color: #FFF;
 }
 
@@ -173,14 +190,14 @@ body * {
 }
   .ribbon-front {
 	background-color: #F1C127;	height: 35px;
-	width: 140px;
+	width: 132px;
 	position: relative;
-	left:-20px;
+	left:-16px;
 	z-index: 2;
 	border-bottom: 1px solid #BB8612;
-	margin-left: 1px;
+	
 }
-
+/*
   .ribbon-front,
   .ribbon-back-left,
   .ribbon-back-right
@@ -190,7 +207,7 @@ body * {
 	-webkit-box-shadow: 0px 0px 4px rgba(0,0,0,0.55);
 	-o-box-shadow: 0px 0px 4px rgba(0,0,0,0.55);
 }
-
+*/
   .ribbon-edge-topleft,
   .ribbon-edge-topright,
   .ribbon-edge-bottomleft,
@@ -222,8 +239,8 @@ body * {
 	border-width: 0px 20px 0 0;
 }
   .ribbon-edge-bottomleft {
-	border-width: 0px 5px 16px 1px;;
-	margin-left: -1px;
+	border-width: 0px 9px 8px 0px;
+	margin-left: -5px;
 }
 
   .ribbon-edge-topright,
@@ -242,8 +259,8 @@ body * {
 
   .ribbon-back-left {
 	position: absolute;
-	top: 10px;
-	left: -10px;
+	top: 0;
+	left: -25px;
 	width: 10px;
 	height: 35px;
 	background-color: #F1C127;	z-index: 0;
@@ -259,8 +276,8 @@ body * {
 }
 
 .ribbon-text {
-	margin-left: 19px;
-	margin-top: 8px;
+	margin-left: 10px;
+	margin-top: 7px;
 	position: absolute;
 	font-size: 13px;
 	font-weight: bolder;
@@ -270,7 +287,7 @@ body * {
 
 /* Ribbon stuff  END */
 
-.imgbar-btm{
+.imgbar-btm {
 	width: 620px;
 	height: 85px;
 	background-color: #C5C2BA;
@@ -289,6 +306,12 @@ body * {
 	font-size: 17px; 
 }
 
+.arrow {
+		margin-left: 6px;
+		margin-top: 3px;
+		height: 35px;
+}
+
 .sub {
 	color: #747372;
 	font-size: 13px;
@@ -305,6 +328,7 @@ body * {
 	display: inline-block;
 	margin-top: 30px;
 	margin-left: 15px;
+	box-shadow: inset 0px 0px 4px rgba(0,0,0,0.11);
 }
 
 .boxx {
@@ -314,46 +338,533 @@ body * {
 	display: inline-block;
 	margin-top: 30px;
 	margin-left: 21px;
+	box-shadow: inset 0px 0px 4px rgba(0,0,0,0.11);
 }	
 
 .box h1 {
 	font-size: 65px;
 	color: #fff;
-	text-shadow:0 0px 2px rgba(94, 91, 91, 0.99);
-	margin: 0;
+	text-shadow:0 0px 2px rgba(94, 91, 91, 0.5);
+	margin: 15px 31px;
 	text-align: center;
+	position: absolute;
+
 }
 
 .boxx h1 {
 	font-size: 65px;
 	color: #fff;
-	text-shadow:0 0px 2px rgba(94, 91, 91, 0.99);
-	margin: 0;
+	text-shadow:0 0px 2px rgba(94, 91, 91, 0.5);
+	margin: 15px;
 	text-align: center;
+	position: absolute;
+
 }
 
 .inside {
 	width: 140px;
-	height: 36px;
+	height: 37px;
 	position: absolute;
 	background-color: #A69F91;
-	margin-top: 32px;
+	margin-top: 115px;
+	box-shadow: inset 0px 0px 4px rgba(0,0,0,0.07);
 
 }
 
 
 .insidee {
 	width: 140px;
-	height: 36px;
+	height: 37px;
 	position: absolute;
 	background-color: #A69F91;
-	margin-top: 32px;
+	margin-top: 115px;
+	box-shadow: inset 0px 0px 4px rgba(0,0,0,0.07);
 
 }
 
+.inside h4 {
+	margin-top: 9px;
+	font-size: 13px;
+	font-weight: bold;
+	text-align: center;
+	color: #313131;
+	text-shadow: 0 1px 1px rgba(225, 225, 225, .50);
+}
+
+.insidee h4 {
+	margin-top: 9px;
+	font-size: 13px;
+	font-weight: bold;
+	text-align: center;
+	color: #313131;
+	text-shadow: 0 1px 1px rgba(225, 225, 225, .50);
+}
+
+.btn-action {
+	position: relative;
+	width: 305px;
+	height: 65px;
+	margin-left: 15px;
+	margin-top: 24px;
+	display: inline-block;
+	border-radius: 7px;
+	background: rgb(247,239,22); /* Old browsers */
+	background: -moz-linear-gradient(top,  rgba(247,239,22,1) 0%, rgba(234,168,14,1) 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(247,239,22,1)), color-stop(100%,rgba(234,168,14,1))); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top,  rgba(247,239,22,1) 0%,rgba(234,168,14,1) 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top,  rgba(247,239,22,1) 0%,rgba(234,168,14,1) 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top,  rgba(247,239,22,1) 0%,rgba(234,168,14,1) 100%); /* IE10+ */
+	background: linear-gradient(to bottom,  rgba(247,239,22,1) 0%,rgba(234,168,14,1) 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f7ef16', endColorstr='#eaa80e',GradientType=0 ); /* IE6-9 */
+	border: 1px solid rgba(151, 106, 26, 0.56);
+	box-shadow: 0px 5px 3px -3px rgba(0, 0, 0, 0.18), 
+							inset 0px 1px 1px 0px rgba(255, 254, 236, 1);
+
+	/* Text */
+
+	color: #fff;
+	text-shadow: 0 2px 1px rgba(187, 134, 18, 0.84);
+	font-size: 23px;
+	font-weight: lighter;
+	letter-spacing: 1px;
+	line-height: 56px;
+	text-align: center;
+	z-index: 20;
+
+}
+
+.under-btn {
+	width: 283px;
+	height: 82px;
+	display: inline-block;
+	background-color: #FFF;
+	border-radius: 7px;
+	border: 1px solid rgba(128, 128, 128, 0.75);
+	position: relative;
+	margin-top: -7px;
+	margin-left: 26px;
+	box-shadow: inset 0px -3px 1px 0px rgba(0, 0, 0, 0.11);
+	z-index: 10;
+
+}
+
+.under-btn img {
+	height: 58px;
+	position: absolute;
+	margin-left: 13px;
+	margin-top: -6px;
+}
+
+.under-btn-text1  {
+		margin-left: 60px;
+
+}
+
+.under-btn-text2  {
+	margin-left: 60px;
+	margin-top: -18px;
+	font-size: 13px;
+
+}
+
+.sub-info {
+	text-align: center;
+	font-size: 11px;
+	color: #A7A7A7;
+	border-bottom: 1px solid #A7A7A7;
+	margin-left: 15px;
+	width: 306px;
+}
+
+.image1-block {
+	position: relative;
+	display: inline-block;
+	margin-top: 40px;
+}
+
+.image2-block {
+	position: absolute;
+	display: inline-block;
+	margin-top: 40px;
+	margin-left: 30px
+}
+
+ .image3-block {
+ 	position: absolute;
+	display: inline-block;
+	margin-top: 40px;
+	right: 0;
+ }
+
+.image-block-text {
+	font-size: 15px;
+	font-weight:bold;
+	margin: 6px 0 0;
+	position: relative;
+	letter-spacing: -1px;
+}
+ 
+.image-block-subtext {
+	font-size: 10px;
+	margin: 1px 0 0;
+	color: #A7A7A7;
+	position: relative;
+}
+
+.time {
+	position: absolute;
+	right: 0;
+	top: 201px;
+	line-height: 18px;
+	font-weight: lighter;
+	font-size: 12px;
+}
+
+.border-container {
+	border-top: 1px solid #A7A7A7;
+}
+
+.upcoming {
+	font-weight: bold;
+}
+
+table {
+	border-spacing: 0;
+	line-height: 35px;
+	width: 630px;
+}
+
+td {
+	border-bottom: 1px solid #A7A7A7;
+}
+
+.col-1-nb, .col-2-nb, .col-3-nb {
+	border: none;
+}
+
+.col-1, .col-1-nb {
+	font-weight: bold;
+	font-size: 14px;
+}
+
+.col-2, .col-2-nb {
+	font-weight: lighter;
+	font-size: 14px;
+}
+
+.col-3, .col-3-nb {
+	color: #A7A7A7;
+	text-align: right; 
+	font-size: 14px;
+}
+
+.box-behind {
+	width: 300px;
+	height:204px;
+	position: absolute;
+	right: 0;
+	top: 35px;
+	background: #C5C2BA;
+}
+
+.start {
+	text-align: center;
+	margin: 7px auto;
+	color: #FFF;
+	font-size: 22px;
+	text-shadow:0 1px 1px rgba(0, 0, 0, 0.48);
+}
+
+.back-bar {
+	width: 200px;
+	height: 10px;
+	background-color: #AFABAB;
+	margin: 25px auto;
+	position: relative;
+}
+
+.btns-box {
+	position: absolute;
+	top: 43px;
+	left: 41px;
+	width: 217px;
+}
 
 
+.btn1 {
+	display: inline-block;
+	width: 40px;
+	height: 40px;
+	border-radius: 50%;
+	text-align: center;
+	line-height: 40px;
+	font-weight: bold;
+	color: #646464;
+	font-size: 20px;
+	text-shadow: 0 1px 0px rgba(255, 255, 255, 1);
+	border: 1px solid rgba(128, 128, 128, 1);
+	box-shadow: inset 0px 1px 0 0px rgba(255, 255, 255, 1),
+							           0 0 4px 1px rgba(0, 0, 0, 0.20);
+	background: rgb(214,214,214); /* Old browsers */
+	background: -moz-linear-gradient(top,  rgba(214,214,214,1) 1%, rgba(251,251,251,1) 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(1%,rgba(214,214,214,1)), color-stop(100%,rgba(251,251,251,1))); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top,  rgba(214,214,214,1) 1%,rgba(251,251,251,1) 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top,  rgba(214,214,214,1) 1%,rgba(251,251,251,1) 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top,  rgba(214,214,214,1) 1%,rgba(251,251,251,1) 100%); /* IE10+ */
+	background: linear-gradient(to bottom,  rgba(204, 203, 203, 1) 1%,rgba(251,251,251,1) 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d6d6d6', endColorstr='#fbfbfb',GradientType=0 ); /* IE6-9 */
 
+
+}
+
+.btn2 {
+	display: inline-block;
+	width: 40px;
+	height: 40px;
+	margin-left: 40px;
+	border-radius: 50%;
+	text-align: center;
+	line-height: 40px;
+	font-weight: bold;
+	color: #646464;
+	font-size: 20px;
+	text-shadow: 0 1px 0px rgba(255, 255, 255, 1);
+	border: 1px solid rgba(128, 128, 128, 1);
+	box-shadow: inset 0px 1px 0 0px rgba(255, 255, 255, 1),
+							           0 0 4px 1px rgba(0, 0, 0, 0.20);
+	background: rgb(214,214,214); /* Old browsers */
+	background: -moz-linear-gradient(top,  rgba(214,214,214,1) 1%, rgba(251,251,251,1) 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(1%,rgba(214,214,214,1)), color-stop(100%,rgba(251,251,251,1))); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top,  rgba(214,214,214,1) 1%,rgba(251,251,251,1) 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top,  rgba(214,214,214,1) 1%,rgba(251,251,251,1) 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top,  rgba(214,214,214,1) 1%,rgba(251,251,251,1) 100%); /* IE10+ */
+	background: linear-gradient(to bottom,  rgba(204, 203, 203, 1) 1%,rgba(251,251,251,1) 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d6d6d6', endColorstr='#fbfbfb',GradientType=0 ); /* IE6-9 */
+
+
+}
+
+.btn3 {
+	display: inline-block;
+	width: 40px;
+	height: 40px;
+	border-radius: 50%;
+	position: absolute;
+	right: 0;
+	text-align: center;
+	line-height: 40px;
+	font-weight: bold;
+	color: #646464;
+	font-size: 20px;
+	text-shadow: 0 1px 0px rgba(255, 255, 255, 1);
+	border: 1px solid rgba(128, 128, 128, 1);
+	box-shadow: inset 0px 1px 0 0px rgba(255, 255, 255, 1),
+										     0 0 4px 1px rgba(0, 0, 0, 0.20);
+	background: rgb(214,214,214); /* Old browsers */
+	background: -moz-linear-gradient(top,  rgba(214,214,214,1) 1%, rgba(251,251,251,1) 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(1%,rgba(214,214,214,1)), color-stop(100%,rgba(251,251,251,1))); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top,  rgba(214,214,214,1) 1%,rgba(251,251,251,1) 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top,  rgba(214,214,214,1) 1%,rgba(251,251,251,1) 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top,  rgba(214,214,214,1) 1%,rgba(251,251,251,1) 100%); /* IE10+ */
+	background: linear-gradient(to bottom,  rgba(204, 203, 203, 1) 1%,rgba(251,251,251,1) 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d6d6d6', endColorstr='#fbfbfb',GradientType=0 ); /* IE6-9 */
+}
+
+.box-list {
+	margin-left: -28px;
+	margin-top: -5px;
+}
+
+.box-list li {
+	display: inline-block;
+	margin-left: 15px;
+	list-style: none;
+	font-size: 12px;
+	font-weight: bold;
+	text-align: center;
+	line-height: 13px;
+	color: #313131;
+	text-shadow: 0 1px 1px rgba(225, 225, 225, .50);
+}
+
+.box-btn {
+	display: inline-block;
+	position: relative;
+	width: 280px;
+	height: 62px;
+	margin: -6px 9px;
+	border-radius: 7px;
+	text-align: center;
+	line-height: 62px;
+	letter-spacing: 1px;
+	font-size: 25px;
+	color: #007FB2;
+	text-shadow: 0 1px 1px rgba(255, 255, 255, 1);
+	border: 1px solid rgba(128, 128, 128, 1);
+  background: rgb(231,230,226); /* Old browsers */
+	background: -moz-linear-gradient(top,  rgba(231,230,226,1) 43%, rgba(209,205,200,1) 93%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(43%,rgba(231,230,226,1)), color-stop(93%,rgba(209,205,200,1))); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top,  rgba(231,230,226,1) 43%,rgba(209,205,200,1) 93%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top,  rgba(231,230,226,1) 43%,rgba(209,205,200,1) 93%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top,  rgba(231,230,226,1) 43%,rgba(209,205,200,1) 93%); /* IE10+ */
+	background: linear-gradient(to bottom,  rgba(231,230,226,1) 43%,rgba(209,205,200,1) 93%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e7e6e2', endColorstr='#d1cdc8',GradientType=0 ); /* IE6-9 */
+	box-shadow: 0px 5px 3px -3px rgba(0, 0, 0, 0.18), 
+				 inset 0px 1px 1px 0px rgba(255, 255, 255, 1);
+
+}
+
+.mob-cat {
+	margin-top: 30px;
+	margin-bottom: 6px;
+	padding: 0;
+	font-size: 19px;
+	color: #FFF;
+	text-shadow: 0 1px 1px rgba(0, 0, 0, .50);
+}
+
+.btn-col1, .btn-col2 {
+	display: inline-block;
+	margin-right: 20px;
+}
+
+.ftr-btn {
+	width: 140px;
+	height: 40px;
+	border-radius: 5px;
+	margin: 11px -3px;
+	font-size: 12px;
+	letter-spacing: 1px;
+	text-align: center;
+	line-height: 35px;
+	color: #FFF;
+	background: #616060;
+	text-shadow: 0 1px 1px rgba(0, 0, 0, .50);
+	border: 1px solid rgba(0, 0, 0, 0.36);
+	box-shadow: inset 0px 1px 1px 0px rgba(255, 255, 255, .254);
+}
+
+
+.mid {
+	display: inline-block;
+	position: absolute;
+	top: 20px;
+	margin-left: 95px;
+	color: #FFF;
+	text-shadow: 0 1px 1px rgba(0, 0, 0, .50);
+}
+
+.connect {
+	font-size: 19px;
+}
+
+.first {
+	font-size: 11px;
+	color: #E3E3E1;
+	letter-spacing: 1px;
+}
+
+input {
+	width: 147px;
+	height: 40px;
+	border-radius: 5px;
+	padding: 0 0px 0 23px;
+	margin-top: 10px;
+	position: absolute;
+}
+
+input[type="text"] {
+	font-size: 18px;
+	color: #9B9A9A;
+}
+
+.check-box {
+	margin: 21px;
+	width: 42px;
+	height: 43px;
+	background: #9B9A9A;
+	position: absolute;
+	margin-left: 170px;
+	margin-top: 11px;
+	border-radius: 5px;
+}
+
+.check-box img {
+	margin: 10px 8px;
+}
+
+.social {
+	display: inline-block;
+	margin-top: 74px;
+	padding: 0;
+	list-style: none;
+}
+
+.social li {
+	padding: 8px;
+	font-size: 12px;
+	letter-spacing: 1px;
+	line-height: 25px;
+	border-bottom: 1px solid #3D3D3D;
+	text-shadow: 0 1px 1px rgba(0, 0, 0, .50);
+
+}
+
+.social li:last-child	{
+	border: none;
+}
+
+.btn-how {
+	width: 220px;	
+	height: 50px;
+	display: inline-block;
+	position: absolute;
+	right: 0;
+	top: 38px;
+	border-radius: 7px;
+	text-align: center;
+	line-height: 50px;
+	letter-spacing: 1px;
+	font-size: 18px;
+	font-weight: bold;
+	color: #FFF;
+	text-shadow: 0 1px 1px rgba(0, 0, 0, .50);
+	background: rgb(247,239,22); /* Old browsers */
+	background: -moz-linear-gradient(top,  rgba(247,239,22,1) 0%, rgba(234,168,14,1) 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(247,239,22,1)), color-stop(100%,rgba(234,168,14,1))); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top,  rgba(247,239,22,1) 0%,rgba(234,168,14,1) 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top,  rgba(247,239,22,1) 0%,rgba(234,168,14,1) 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top,  rgba(247,239,22,1) 0%,rgba(234,168,14,1) 100%); /* IE10+ */
+	background: linear-gradient(to bottom,  rgba(247,239,22,1) 0%,rgba(234,168,14,1) 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f7ef16', endColorstr='#eaa80e',GradientType=0 ); /* IE6-9 */
+	border: 1px solid rgba(70, 70, 70, 1);
+	box-shadow: 0px 5px 3px -3px rgba(0, 0, 0, 0.18), 
+							inset 0px 1px 1px 0px rgba(255, 254, 236, 1);
+}
+
+.have	{
+	display: inline-block;
+	margin-top: 112px;
+	margin-left: 100px;
+	color: #FFF;
+	font-size: 19px;
+	letter-spacing: 1px;
+	text-shadow: 0 1px 1px rgba(0, 0, 0, .50);
+}
+
+.last {
+	margin-left: 100px;
+	padding-bottom: 5px;
+}
+
+.first2 {
+	margin-top: 25px;
+	border-top: 1px solid rgba(56, 56, 56, 1);
+	font-size: 11px;
+	color: #E3E3E1;
+	letter-spacing: 1px;
+	padding-top: 8px;
+}
 
 
 
